@@ -53,6 +53,7 @@ BETA ======= 1.9.0
 - added: F.onSchema(req, group, name, callback(err, body)) -> for custom schemas
 - added: @{import(filename1, filename2, filenameN)}
 - added: SchemaBuilderEntity.setError(function(error, model, type, name));
+- added: F.snapshop(url, filename, [callback]);
 
 - updated: (IMPORTANT) routing: `json` flag is not required for receiving incomming data as JSON
 - updated: `F.mail(address, subject, view, [model], [callback], [language])` added language
